online username fix

--- a/game.html
+++ b/game.html
@@ -214,7 +214,7 @@ h4{
 			for(var i = 0; i < users.length; i++) {
 				var userName = document.createElement('li');
 
-				userName.innerText = users[i].name || 'Гость';
+				userName.innerText = users[i].username || 'Гость';
 
 				container.appendChild(userName);
 			}
