--- a/game.html
+++ b/game.html
@@ -213,11 +213,11 @@ h4{
 	getOnlineUsers();
 
 	function overlay (show) {
-    var overlayDisplay = document.querySelector('.overlaymain');
+    //var overlayDisplay = document.querySelector('.overlaymain');
     
-    if (show) overlayDisplay.style.display = "block";
+    //if (show) overlayDisplay.style.display = "block";
    
-    else overlayDisplay.style.display = "none";
+    //else overlayDisplay.style.display = "none";
   
   }
 
